[tool.poetry]
name = "fastapi-redis-cache"
version = "0.3.0"
description = "A simple and robust caching solution for FastAPI endpoints, fueled by the unfathomable power of Redis."
authors = ["Grant Ramsay <seapagan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.6.4"
redis = "^5.0.3"
fastapi = { extras = ["all"], version = "^0.110.0" }


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
fakeredis = "^2.21.3"
faker = "^24.2.0"
mock = "^5.1.0"
pyfakefs = "^5.3.5"
pytest = "^8.1.1"
pytest-asyncio = "0.21.1"
pytest-cov = "^4.0.0"
pytest-env = "^1.1.3"
pytest-mock = "^3.11.1"
pytest-order = "^1.2.0"
pytest-randomly = "^3.15.0"
pytest-reverse = "^1.7.0"
pytest-sugar = "^1.0.0"
pytest-watcher = "^0.4.1"
mypy = "^1.9.0"
pre-commit = "^3.6.2"
ruff = "^0.3.3"
poethepoet = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
